synaptic (0.61ubuntu5) hardy; urgency=low

  [ Brian Murray ]
  * typo fixes (LP: #64482, LP: #157850, LP: #179914, LP: #179912, LP: #179909)

  [ Michael Vogt ]
  * add new RFilePackageFilter 
  
 --

synaptic (0.61ubuntu4) hardy; urgency=low

  * fix incorect transient settings when run with --no-main-window
    (thanks to Robert Colins for reporting)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 31 Jan 2008 10:51:31 +0100

synaptic (0.61ubuntu3) hardy; urgency=low

  * use new ListUpdate() code from apt

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Jan 2008 21:20:49 +0100

synaptic (0.61ubuntu2) hardy; urgency=low

  * debian/rules, debian/control:
    - use dh_icons and add appropriate b-d on debhelper
  * g++ 4.3 fixes (closes: #456044)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Dec 2007 20:48:57 +0100

synaptic (0.61ubuntu1) hardy; urgency=low

  * merged from debian/unstable, remaining changes:
    - ubuntu icons for supported applications
    - maintained filed changed
    - launchpad-integration
    - build against latest apt in ubuntu
    - support section metapackages
    - x-ubuntu-gettext-domain in desktop file

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Dec 2007 15:49:12 +0100

synaptic (0.61) unstable; urgency=low

  [ Michael Vogt ]
  * fix missing Basque translation (closes: #429460)
  * updatd Basque translation (thanks to mikel paskual)
  * update galician translation (thanks to Ignacio Casal)
  * updated Czech translation (thanks to Vit Pelcak)
  * updated Finish translation (thanks to Timo Jyrinki)
  * po/POTFILES.in, po/POTFILES.skip:
    - updated so that intltool-update -m is happy again (thanks
      to Nacho)
  * po/be@latin.po:
    - merged translation from Ihar H
  * po/cs.po:
    - bugfixes by Vít Pelčák
  * gtk/rgmainwindow.cc:
    - add missing space in the wget script (thanks to Avi Rozen)
      (closes: #435682)
  * make it build with g++ 4.3
  * debian/synaptic.menu: