@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(configure.in)
 
-AM_INIT_AUTOMAKE(synaptic, 0.61ubuntu3)
+AM_INIT_AUTOMAKE(synaptic, 0.61ubuntu5)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
