@@ -5,8 +5,9 @@ synaptic (0.61ubuntu5) hardy; urgency=low
 
   [ Michael Vogt ]
   * add new RFilePackageFilter 
+  * added default custom filter that shows installed community software
   
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 12 Feb 2008 22:54:39 +0100
 
 synaptic (0.61ubuntu4) hardy; urgency=low
 
